feat: 添加自定义h5字体

--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -3,3 +3,8 @@ $fontsize: 37.5;
 @function px2rem($px){
     @return ($px / $fontsize) + rem
 }
+
+@font-face {
+    font-family: '凌云行书';
+    src: url('./fonts/FZSJ-LINGYXS.TTF')
+}
