--- a/src/assets/style/icon.css
+++ b/src/assets/style/icon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('/fonts/icomoon.eot?97tqjn');
-  src:  url('/fonts/icomoon.eot?97tqjn#iefix') format('embedded-opentype'),
-    url('/fonts/icomoon.ttf?97tqjn') format('truetype'),
-    url('/fonts/icomoon.woff?97tqjn') format('woff'),
-    url('/fonts/icomoon.svg?97tqjn#icomoon') format('svg');
+  src:  url('./fonts/icomoon.eot?97tqjn');
+  src:  url('./fonts/icomoon.eot?97tqjn#iefix') format('embedded-opentype'),
+    url('./fonts/icomoon.ttf?97tqjn') format('truetype'),
+    url('./fonts/icomoon.woff?97tqjn') format('woff'),
+    url('./fonts/icomoon.svg?97tqjn#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
