--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -9,16 +9,15 @@ $fontsize: 37.5;
     src: url("./fonts/FZSJ-LINGYXS.TTF");
 }
 
-
 .slide-down-enter-active,
 .slide-down-leave-active {
-    transition: all 0.5s ease-in-out;
+    transition: all .5s ease-in-out;
 }
 
 .slide-down-enter,
 .slide-down-leave-to {
     transform: translateY(-48rem);
-    opacity: .2;
+    opacity: 0.2;
 }
 
 .slide-up-enter-active,
@@ -29,5 +28,5 @@ $fontsize: 37.5;
 .slide-up-enter,
 .slide-up-leave-to {
     transform: translateY(48rem);
-    opacity: .2;
+    opacity: 0.2;
 }
