--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -1,3 +1,7 @@
+@import './minix.scss';
+@import './reset.scss';
+@import './transition.scss';
+
 $fontsize: 37.5;
 
 @function px2rem($px) {
@@ -7,26 +11,4 @@ $fontsize: 37.5;
 @font-face {
     font-family: "凌云行书";
     src: url("./fonts/FZSJ-LINGYXS.TTF");
-}
-
-.slide-down-enter-active,
-.slide-down-leave-active {
-    transition: all .5s ease-in-out;
-}
-
-.slide-down-enter,
-.slide-down-leave-to {
-    transform: translateY(-48rem);
-    opacity: 0.2;
-}
-
-.slide-up-enter-active,
-.slide-up-leave-active {
-    transition: all 0.5s ease-in-out;
-}
-
-.slide-up-enter,
-.slide-up-leave-to {
-    transform: translateY(48rem);
-    opacity: 0.2;
 }
